# GroupChat

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CryptoAdapter.cpp  CryptoContext.cpp  CryptoContext.h  cdjpeg.c  native-lib.c  rdswitch.c  transupp.c
app/src/main/cpp/include/: cdjpeg.h
app/src/main/java/cn/edu/buaa/crypto/algebra/serparams/: PairingKeyEncapsulationSerPair.java  PairingKeySerPair.java
app/src/main/java/cn/edu/buaa/crypto/encryption/abe/cpabe/MHOO/: CPABEMHOOEngine.java
app/src/main/java/cn/edu/buaa/crypto/utils/: AESCoder.java  AESFileUtil.java  Base64Util.java  InsecureSHA1PRNGKeyDerivator.java  PolicyUtil.java  TestUtils.java  ZipUtils.java
app/src/main/java/com/example/access/: AccessPolicyExamples.java
app/src/main/java/com/example/encryption/abe/: CPABEMHOOEngineTest.java
app/src/main/java/com/example/encryption/ibe/: IBEEngineTest.java
app/src/main/java/com/example/groupchat/: Box.java  Client.java  FaceFeature.java  Facenet.java  ImgUtils.java  IndexActivity.java  JniUtils.java  JsonUtils.java  MTCNN.java  MainActivity.java  Message.java  MessagesListAdapter.java  NameActivity.java  RegisterActivity.java  SealCKKSTestActivity.java  TakePictureManager.java  Utils.java  WsConfig.java  downloadFileThread.java
app/src/main/res/layout/: activity_index.xml  activity_main.xml  activity_name.xml  activity_register.xml  activity_seal_ckkstest.xml  list_item_message_left.xml  list_item_message_right.xml
app/src/main/res/values/: colors.xml  strings.xml
(+22 files in other folders)
